--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,3 @@
-
 name: Deploy RNG App
 
 on:
@@ -12,6 +11,9 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      
+      - name: Make scripts executable
+        run: chmod +x scripts/*.sh
       
       - name: Backup current version
         run: |
