--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,28 +1,34 @@
-name: Deploy RNG App
+# .github/workflows/deploy.yml
+name: Build and Push to DockerHub
 
 on:
   push:
-    branches: [main]
+    branches: [ main ]
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Get code
-        uses: actions/checkout@v3
-      
-      - name: Make scripts executable
-        run: chmod +x scripts/*.sh
-      
-      - name: Backup current version
-        run: |
-          if [ -f "VERSION" ]; then
-            cp VERSION VERSION.backup
-          fi
-      
-      - name: Deploy app
-        run: ./scripts/deploy.sh
-      
-      - name: Test deployment
-        run: sleep 5 && ./scripts/health-check.sh
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Read VERSION file
+      id: version
+      run: |
+        VERSION=$(cat VERSION)
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
+        echo "Building version: $VERSION"
+    
+    - name: Login to DockerHub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+    
+    - name: Build and push Docker image
+      uses: docker/build-push-action@v4
+      with:
+        context: .
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/rng-flask-app:latest
