yml fixes and finalized version edit4

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,12 +13,10 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
     
-    - name: Read VERSION file
-      id: version
+    - name: Set VERSION environment variable
       run: |
-        VERSION=$(cat VERSION)
-        echo "version=$VERSION" >> $GITHUB_OUTPUT
-        echo "Building version: $VERSION"
+        echo "VERSION=$(cat VERSION | tr -d '\n\r\t ')" >> $GITHUB_ENV
+        echo "Building version: $(cat VERSION)"
     
     - name: Login to DockerHub
       uses: docker/login-action@v3
@@ -31,4 +29,8 @@ jobs:
       with:
         context: .
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/rng-flask-app:latest
+        build-args: |
+          APP_VERSION=${{ env.VERSION }}
+        tags: |
+          ${{ secrets.DOCKERHUB_USERNAME }}/rng-flask-app:latest
+          ${{ secrets.DOCKERHUB_USERNAME }}/rng-flask-app:${{ env.VERSION }}
